@@ -18,6 +18,7 @@
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
 
+#include "aide.h"
 #include <stdio.h>
 #include <string.h>
 #include <sys/types.h>
@@ -32,7 +33,6 @@
 #include "db_file.h"
 #include "conf_yacc.h"
 #include "util.h"
-#include "aide.h"
 #include "db_sql.h" /* typedefs */
 #include "commandconf.h"
 /*for locale support*/
