@@ -1,0 +1,7 @@
+/* $Header$
+ * This file is needed because flex generates a C file
+ * that includes <stdio.h> before "aide.h"
+ */
+
+#include "aide.h"
+#include "db_lex.c"
