@@ -18,8 +18,8 @@
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
 
+#include "aide.h"
 #include <stdlib.h>
-#include "../config.h"
 #include "md.h"
 #include "report.h"
 #include <string.h>
