@@ -18,6 +18,7 @@
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
 
+#include "aide.h"
 #include <stdlib.h>
 #include <unistd.h>
 #include <string.h>
@@ -36,7 +37,6 @@
 #include "report.h"
 #include "db_config.h"
 #include "util.h"
-#include "aide.h"
 
 #define URL_UNSAFE " <>\"#%{}|\\^~[]`@:\033'"
 #define ISPRINT(c) (isascii(c) && isprint(c))
